# ETH-V3D-LGPL

./: .gitignore  README-SFM.TXT
V3D/: CMakeLists.txt
V3D/Apps/CUDA/: CMakeLists.txt  cuda_cv_segmentation.cpp  cuda_cv_segmentation.h  cuda_cv_segmentation_kernel.cu  cuda_denoise_tvl1.cpp  cuda_denoise_tvl1_kernel.cu  cuda_denoise_tvl1_kernel_tex1d.cu  cuda_denoise_tvl1_tex1d.cpp  cuda_denoise_tvl2.cpp  cuda_denoise_tvl2_kernel.cu  cuda_tvl1_flow.cpp  cuda_tvl1_flow_bregman.cpp  cuda_tvl1_flow_bregman_kernel.cu  cuda_tvl1_flow_kernel.cu
V3D/Apps/CycleInference/: CMakeLists.txt
V3D/Apps/SfM/: CMakeLists.txt  conf.txt.template  extract_sift_gpu.cpp  extract_sift_opencv.cpp  extract_sift_vlfeat.cpp  generate_calibration_db.cpp  generate_submodels.cpp  generate_triples.cpp  list_images_with_exif.cpp  match_sequence.cpp  match_using_voctree.cpp  reconstruct_from_EGs_Conic_L1.cpp  reconstruct_from_EGs_L1.cpp  reconstruct_from_submodels.cpp  reconstruct_from_submodels_L1.cpp  reconstruct_from_submodels_staged.cpp  reconstruction_common.cpp  reconstruction_common.h  reconstruction_common2.cpp  undistort_images.cpp  undistort_images_nonstd.cpp  v3dmodel2wrl.cpp
V3D/Base/: v3d_cfgfile.h  v3d_config.cpp  v3d_config.h  v3d_database.cpp  v3d_database.h  v3d_exifreader.cpp  v3d_feature.h  v3d_image.h  v3d_imageprocessing.h  v3d_utilities.cpp  v3d_utilities.h  v3d_videoio.cpp  v3d_videoio.h  v3d_voctree.h  v3d_vrmlio.cpp
V3D/CUDA/: v3d_cudamatching.cu
V3D/Config/: local_config.cmake  local_config.cmake.ubuntu_10.04_x86_64
V3D/GL/: v3d_gpubase.cpp  v3d_gpubase.h  v3d_gpubinarysegmentation.cpp  v3d_gpubinarysegmentation.h  v3d_gpuflow.cpp  v3d_gpuflow.h  v3d_gpupottslabeling.cpp  v3d_gpupottslabeling.h  v3d_gpuundistort.cpp  v3d_gpuundistort.h  v3d_gpuvarstereo.cpp  v3d_gpuvarstereo.h
V3D/GL/Shaders/: binary_segmentation_fwbw_update_u.cg  binary_segmentation_pd_update_p.cg  binary_segmentation_pd_update_u.cg  binary_segmentation_relaxed_update_u.cg  binary_segmentation_uzawa_update_p.cg  binary_segmentation_uzawa_update_u.cg  potts_3labeling_huber_fwbw_update_u.cg  potts_3labeling_update_p.cg  potts_3labeling_update_u.cg  undistort_parametric.cg  warp_homography_packed.cg
V3D/GL/Shaders/OpticalFlow/: struct_l1_flow_update_alpha.cg  struct_l1_flow_update_p.cg  struct_l1_flow_update_q.cg  struct_l1_flow_update_u.cg
V3D/GL/Shaders/VarStereo/: disp_warp_image.cg  struct_l1_stereo_update_q.cg  struct_l1_stereo_update_u.cg
V3D/Geometry/: v3d_3plus1pt_lex_generated.h  v3d_homography.cpp  v3d_mviewinitialization.cpp  v3d_mviewutilities.cpp  v3d_mviewutilities_rotations.cpp  v3d_poseutilities.h  v3d_poseutilities_3plus1pt.cpp  v3d_tripletutilities.h
